--- a/config/locales/menu.zh-TW.yml
+++ b/config/locales/menu.zh-TW.yml
@@ -128,6 +128,7 @@
     allow_change_login: "允許用戶修改用戶名"
     twitter_id: "Twitter ID 用於 Twitter 分享的時候提及，比如: ruby​​_china，不帶 @"
     share_allow_sites: "分享目标，可选 [twitter,weibo,facebook,wechat,google_plus,douban,tumblr,pinterest,linkedin,email,reddit,hacker_news]"
+    editor_languages: 編輯器插入代碼語言可選項（一行一個），填寫文件擴展名比如："rb, go, php, js, html"
   pagination:
     next: "下一頁"
     prev: "上一頁"
