--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -30,8 +30,7 @@
         website: "個人主頁"
         last_logined_at: "上次登錄時間"
         tagline: "簽名"
-        state: "狀態"
-        verified: "信任用戶"
+        state: "等級"
         company: "公司"
         github: "GitHub"
         remember_me: 記住登陸狀態
