Add profiles table to storage contact, reward fields.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,7 +35,8 @@ en:
         github: "GitHub"
         remember_me: "Remember me"
         current_password: "Current Password"
-        profile_fields:
+      profile:
+        contacts:
           qq: QQ
           alipay: Alipay
           paypal: PayPal
