Use Topic list style for user profile page

--- a/config/locales/users.en.yml
+++ b/config/locales/users.en.yml
@@ -42,6 +42,7 @@
     topics: "Topics"
     recent_reply_topics: "Recent replies"
     like: "Likes"
+    overview: "Overview"
     profile: "Profile"
     favorites: "Favorites"
     replies: "Replies"
