--- a/config/locales/users.zh-CN.yml
+++ b/config/locales/users.zh-CN.yml
@@ -42,6 +42,7 @@
       topics: "话题"
       recent_reply_topics: "最近回帖"
       like: "赞"
+      overview: "个人概况"
       profile: "个人信息"
       favorites: "收藏"
       replies: "回帖"
