--- a/config/locales/users.zh-TW.yml
+++ b/config/locales/users.zh-TW.yml
@@ -42,6 +42,7 @@
       topics: "帖子"
       recent_reply_topics: "最近回帖"
       like: "贊"
+      overview: "個人概況"
       profile: "個人信息"
       favorites: "收藏"
       replies: "回帖"
