Refactor registration and login to support complete user info with OAuth login. Fix #1155

--- a/config/locales/users.zh-CN.yml
+++ b/config/locales/users.zh-CN.yml
@@ -8,19 +8,19 @@
     personal_website: "博客"
     recent_publish_topic: "最近发布的帖子"
     recent_reply_topic: "最近回复过的帖子"
-    unbind_warning: "至少要保留一个关联帐号，现在不能解绑。"
-    unbind_success: "%{provider} 帐号解绑成功。"
+    unbind_warning: "至少要保留一个关联账号，现在不能解绑。"
+    unbind_success: "%{provider} 账号解绑成功。"
     please_be_careful: "谨慎修改"
     be_sure_to_use_twitter_id: "此项将会影响回复信息关联,建议用 Twitter ID"
     personal_information: "个人资料设置"
     edit_password: "修改密码"
-    delete_this_account: "删除此帐号"
+    delete_this_account: "删除此账号"
     dont_like_it: "不喜欢?"
-    bind_another_account: "绑定其他帐号用于登录"
+    bind_another_account: "绑定其他账号用于登录"
     register_user: "注册新用户"
     login: "用户名"
     suggest_using_twitter_id: "谨慎填写，以后不可修改，建议用 Twitter ID。"
-    already_have_account: "已经有帐号了？"
+    already_have_account: "已经有账号了？"
     forget_password: "忘记了密码?"
     not_recieve_confirm_mail: "未收到确认邮件?"
     not_recieve_unlock_mail: "未收到解锁邮件?"
