--- a/config/locales/menu.zh-CN.yml
+++ b/config/locales/menu.zh-CN.yml
@@ -67,7 +67,7 @@
     replies_count: "回复"
     likes_count: 赞
     has_deleted: 已删除
-    auth_with_other_services: "用其他平台的帐号登录"
+    auth_with_other_services: "用其他平台的账号登录"
     captcha: "验证码"
     search_result: "搜索结果"
   reply:
