--- a/config/locales/menu.zh-TW.yml
+++ b/config/locales/menu.zh-TW.yml
@@ -89,6 +89,7 @@
     edit_account_path: "個人資料設置"
     likes: "我的收藏"
     teams: "團體 / 組織"
+    dark_mode: "深色模式"
   comments:
     create_comment: "發表評論"
     no_comment: "暫無評論"
