--- a/config/locales/users.zh-CN.yml
+++ b/config/locales/users.zh-CN.yml
@@ -31,7 +31,7 @@
     hot_teams: "TOP 活跃团队"
     recent_joined: "最新加入的会员"
     submit_new_user: "提交注册信息"
-    update_profile: "更新资料"
+    update_profile: "更新"
     update_password: "修改密码"
     email_permission: "公开 Email"
     manage_my_apps: "管理我的应用"
