--- a/config/locales/users.zh-TW.yml
+++ b/config/locales/users.zh-TW.yml
@@ -31,7 +31,7 @@
     hot_teams: "TOP 活躍團隊"
     recent_joined: "最新加入的會員"
     submit_new_user: "提交註冊信息"
-    update_profile: "更新資料"
+    update_profile: "更新"
     update_password: "修改密碼"
     email_permission: "公開 Email"
     manage_my_apps: "管理我的應用"
