--- a/config/locales/menu.zh-TW.yml
+++ b/config/locales/menu.zh-TW.yml
@@ -10,7 +10,7 @@
     saving: "正在保存"
     submitting: "正在提交"
     delete: "刪除"
-    undelete: "恢復"
+    revert: "恢復"
     place_top: "置頂"
     un_top: "去置頂"
     upload: "上傳"
