--- a/config/locales/admin.zh-CN.yml
+++ b/config/locales/admin.zh-CN.yml
@@ -34,5 +34,9 @@
       edit_setting: "修改设置"
     users:
       trust_user_can_modify_wiki: "信任用户将可以修改 Wiki"
+    nodes:
+      new: 新建节点
+      edit: 修改节点
     topic_list: "话题列表"
     check_photo: "瀏覽圖片"
+    reboot_successfully: 已经发起了重启命令，Homeland 在后台异步重启，你可以刷新页面，通过服务启动时间变化来确定重启是否完成。
