--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -50,6 +50,7 @@
         email: "Email"
         email_public: "公开 Email"
         avatar: "头像"
+        theme: "主题偏好"
         location: "城市"
         bio: "个人介绍"
         password: "密码"
