--- a/config/locales/admin.zh-CN.yml
+++ b/config/locales/admin.zh-CN.yml
@@ -34,6 +34,9 @@
       edit_setting: "修改设置"
     users:
       trust_user_can_modify_wiki: "信任用户将可以修改 Wiki"
+      "Delete recent 10 photos": "删除最近 10 个图片"
+      "Delete recent 10 topics": "删除最近 10 篇话题"
+      "Delete recent 10 replies": "删除最近 10 条回复"
     nodes:
       new: 新建节点
       edit: 修改节点
