Add ImageProxy support

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -1,8 +1,8 @@
 "en":
   common:
-    justnow: 'Just Now'
-    hour: 'Hour'
-    minute: 'Minute'
+    justnow: "Just Now"
+    hour: "Hour"
+    minute: "Minute"
     edit: "Edit"
     create: "Create"
     ok: "OK"
@@ -83,8 +83,8 @@
     reward: "Reward"
     has_deleted: "has deleted"
     auth_with_other_services: "Sign in with other services"
-    captcha: 'Captcha'
-    search_result: 'Search results'
+    captcha: "Captcha"
+    search_result: "Search results"
     tips: Tips
     unknow_error: Unknow error, please try out later.
     unknow_user: Unknow user
@@ -97,8 +97,8 @@
     error_message_title: There have %{count} issues can not submit
   reply:
     edit_reply: "Edit Reply"
-    delete_reply_success: 'Delete successfully.'
-    topic_location: 'Replied to'
+    delete_reply_success: "Delete successfully."
+    topic_location: "Replied to"
   photos:
     upload_and_insert_code: "Upload and insert code"
     uploading: "Uploading"
@@ -176,6 +176,7 @@
     twitter_api_secret: "Twitter login API secret key"
     wechat_api_key: "Wechat API key (Keep empty to disable)"
     wechat_api_secret: "Wechat API secret key"
+    imageproxy_url: 'Use <a href="https://www.github.com/willnorris/imageproxy">ImageProxy</a> as outside image proxy. For example: <code>https://imageproxy.your-host.com/1000x/</code>, leave empty to disable.'
   pagination:
     next: "Next"
     prev: "Prev"
@@ -330,29 +331,29 @@
       followers: "Followers"
       blocked: "Blocked"
   team_user_status:
-    pendding: 'Awaiting response'
-    acceped: 'Accepted'
+    pendding: "Awaiting response"
+    acceped: "Accepted"
   team_user_role:
-    owner: 'Owner'
-    member: 'Member'
+    owner: "Owner"
+    member: "Member"
   teams:
-    teams: 'Team'
-    user_existed: 'Already in this team'
-    new_team: 'New Team'
-    edit_team: 'Edit team profile'
-    new_team_user: 'Add a member'
+    teams: "Team"
+    user_existed: "Already in this team"
+    new_team: "New Team"
+    edit_team: "Edit team profile"
+    new_team_user: "Add a member"
     all_members: "All members"
-    edit_team_user: 'Change team roles'
-    delete_team_user: 'Remove member'
-    show_team_user: 'View invitations'
-    accept_team_user: 'Accept invitation'
+    edit_team_user: "Change team roles"
+    delete_team_user: "Remove member"
+    show_team_user: "View invitations"
+    accept_team_user: "Accept invitation"
     do_you_want_accept_team_user_html: "Do you want to accept invitation to join <b>%{team}</b>?"
-    reject_team_user: 'Decline'
-    delete_team_user_confirm: 'Are you sure you want to remove this user from team?'
-    topics: 'Topics of members'
-    users: 'Members'
-    team_user_pendding: 'Awaiting response'
-    settings: 'Settings'
+    reject_team_user: "Decline"
+    delete_team_user_confirm: "Are you sure you want to remove this user from team?"
+    topics: "Topics of members"
+    users: "Members"
+    team_user_pendding: "Awaiting response"
+    settings: "Settings"
     team_users_count: "%{count} team members"
   user_setting:
     profile: Profile
